--- a/admin/assets/src/sass/components/_cpt_metabox.scss
+++ b/admin/assets/src/sass/components/_cpt_metabox.scss
@@ -24,5 +24,18 @@
 			line-height: 1.3;
 			vertical-align: middle;
 		}
+
+		tr > th {
+			min-width: 200px;
+		}
+	}
+
+	.select2 {
+		width: 100% !important;
+	}
+
+	.select2-selection {
+		border: 1px solid #ddd;
+		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.07);
 	}
 }
