handle multiple integrations setup

--- a/admin/assets/src/sass/main.scss
+++ b/admin/assets/src/sass/main.scss
@@ -1,1 +1,3 @@
-@import 'components/cpt_metabox'
+@import 'components/cpt-metabox';
+@import 'components/cpt-slack-metabox';
+@import 'components/cpt-mailchimp-metabox';
