--- a/assets/src/scss/admin/admin.scss
+++ b/assets/src/scss/admin/admin.scss
@@ -1,3 +1,5 @@
+@import '../variables';
+@import '../helpers';
 @import 'components/cpt-metabox';
 @import 'components/cpt-slack-metabox';
 @import 'components/cpt-mailchimp-metabox';
