--- a/assets/src/scss/admin/components/_cpt-metabox.scss
+++ b/assets/src/scss/admin/components/_cpt-metabox.scss
@@ -38,4 +38,13 @@
 		border: 1px solid #ddd;
 		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.07);
 	}
+
+	.select2-selection__choice {
+		margin-bottom: 0;
+
+		.select2-selection__choice__remove {
+			height: 33px;
+			line-height: 33px;
+		}
+	}
 }
