refactor & added webhook integration

--- a/assets/src/scss/admin/admin.scss
+++ b/assets/src/scss/admin/admin.scss
@@ -1,5 +1,7 @@
 @import '../variables';
 @import '../helpers';
 @import 'components/cpt-metabox';
+@import 'components/cpt-general-metabox';
 @import 'components/cpt-slack-metabox';
 @import 'components/cpt-mailchimp-metabox';
+@import 'components/cpt-webhook-metabox';
