--- a/assets/src/scss/admin/components/_cpt-metabox.scss
+++ b/assets/src/scss/admin/components/_cpt-metabox.scss
@@ -1,4 +1,9 @@
 .cf7k-cpt-metabox {
+	.hndle, .toggle-indicator {
+		background: black;
+    	color: white;
+	}
+
 	table {
 		border-collapse: collapse;
 		margin-top: 0.5em;
